# ceopardy

./: .bowerrc  .env  .envrc  .gitignore  AGENTS.md  Makefile  README.adoc  README.md  bower.json  ceopardy.py  config.py  controller.py  exceptions.py  forms.py  model.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  shell.py  utils.py
.claude/: settings.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml
api/: api_routes.py  routes.py
ceopardy/: __init__.py  __main__.py  api.py  config.py  controller.py  exceptions.py  forms.py  game.py  login.py  model.py  shell.py  utils.py
ceopardy.old/: api.py
ceopardy/api/: routes.py
ceopardy/static/fonts/: gyparody.txt
ceopardy/templates/data/: 1st.round  Questions.cp
contrib/: authentication-and-blueprint-api.patch
data/: 1st.round
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  api.js  api.ts  main.js  main.ts  router.js  socket.js  socket.ts  types.ts
frontend/src/components/: BigOverlay.vue  DailyDoubleAnimation.vue  HostBoard.vue  HostControls.vue  HostFooterDrawer.vue  HostHeaderDrawer.vue  QuestionOverlay.vue  TeamPanelViewer.vue  TeamRow.vue  TeamRowDailyDouble.vue  TeamScoringPanel.vue  ViewerBoard.vue
frontend/src/stores/: game.js  game.ts
frontend/src/styles/: fonts.css  main.css
frontend/src/views/: HostView.vue  StartView.vue  ViewerView.vue
helpers/: copy-static-assets.sh  extract-board.pl  questions-to-cuecards.pl  setup-displays.sh
helpers/cue-cards/: README.md  cue-cards-prizes.adoc  cue-cards.adoc
static/: custom.css
static/sounds/: README.adoc
templates/: base.html  gameboard.html  host-setup.html  host.html  lobby.html  login.html  setup.html  start.html  startup.html  viewer.html  wait.html
tests/: test_utils.py
